# git-rewrite

./: LIFECYCLE.md  README.md  justfile  package.json
.github/workflows/: ci.yml  release.yml
previous_for_claude/Git Rewrite.app/Contents/: Info.plist
previous_for_claude/Git Rewrite.app/Contents/Resources/: icon.icns
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: CommitItem.svelte  CommitList.svelte  DiffViewer.svelte  GitGraphLine.svelte  GitGraphView.svelte  Modal.svelte  SearchBar.svelte  ThemeToggle.svelte  constants.ts  graphUtils.ts  modalState.svelte.ts  types.ts
src/routes/: +page.svelte
