[package]
name = "git-rewrite"
version = "0.1.0"
description = "A Git history rewriting tool"
authors = ["you"]
edition = "2021"

[lib]
name = "git_rewrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
window-vibrancy = "0.7"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"

